add profile uadate link

--- a/CLOCK_CHAT/templates/adminuser/admin_profile/admin_profile.html
+++ b/CLOCK_CHAT/templates/adminuser/admin_profile/admin_profile.html
@@ -54,7 +54,7 @@
         <div class="settings">
             <h2>Account Settings</h2>
             <p><strong>Change Password:</strong> <a href="#">Click here</a></p>
-            <p><strong>Edit Profile:</strong> <a href="#">Click here</a></p>
+            <p><strong>Edit Profile:</strong> <a href="{% url 'admin_profile_update' %}">Click here</a></p>
             <p><strong>Logout:</strong> <a href="#">Click here</a></p>
         </div>
 
