update admin profile update template to extend the correct base and improve title

--- a/CLOCK_CHAT/templates/adminuser/admin_profile/admin_profile_update.html
+++ b/CLOCK_CHAT/templates/adminuser/admin_profile/admin_profile_update.html
@@ -1,9 +1,8 @@
-{% extends "../base.html" %}
+{% extends "adminuser/base.html" %}
+{% load static %}
 
-{% block title %}Post Details{% endblock %}
-
+{% block title %}Clock-Chat | Admin Profile Update{% endblock %}
 {% block content %}
-{%load static%}
 
 <style>
    
