--- a/CLOCK_CHAT/templates/enduser/Chats/chat.html
+++ b/CLOCK_CHAT/templates/enduser/Chats/chat.html
@@ -1,14 +1,21 @@
+
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clock Chat</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="static/css/clock.css">
-    <script src="static/js/chat_js.js"></script>
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>{% block title %}Chats{% endblock %}</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+        
+        {% block extra_css %}
+            <link rel="stylesheet" href="static/css/clock.css">
+        {% endblock %}
+    
+        <script src="static/js/chat_js.js"></script>
+    </head>
+    
     <style>
         /* Modal styles */
         .modal {
@@ -193,7 +200,7 @@
             {% if chats %}
             <div class="chat-list">
                 {% for chat in chats %}
-                <div class="chat-item">
+                <div class="chat-item" onclick="window.location.href='url {'message'} chat_id = chat.id'">
                     <div class="chat-avatar">T</div>
                     <div class="chat-header-info">
                         <h3>{{ chat.title }}</h3>
@@ -210,48 +217,10 @@
                 </div>
             </div>
         </div>
-
-        <div class="chat-section">
-            <div class="chat-header">
-                <div class="chat-header-avatar">T</div>
-                <div class="chat-header-info">
-                    <h2>Thor Odinson</h2>
-                    <p>Last seen today at 12:30 PM</p>
-                </div>
-                <div class="chat-header-actions">
-                    <span class="icon"><i class="fas fa-phone-alt"></i></span>
-                    <span class="icon"><i class="fas fa-video"></i></span>
-                    <span class="icon"><i class="fas fa-ellipsis-v"></i></span>
-                </div>
-            </div>
-            <div class="chat-messages">
-                <div class="message received">
-                    <div class="message-avatar">T</div>
-                    <div class="message-content">
-                        <div class="message-bubble">
-                            Hey there! How's the new project coming along?
-                        </div>
-                        <div class="message-time">12:30 PM</div>
-                    </div>
-                </div>
-                <div class="message sent">
-                    <div class="message-content">
-                        <div class="message-bubble">
-                            It's going well! I've completed the initial design mockups. Should I send them over for review?
-                        </div>
-                        <div class="message-time">12:32 PM</div>
-                    </div>
-                </div>
-            </div>
-            <div class="chat-input">
-                <span class="icon sticker-icon"><i class="far fa-smile"></i></span>
-                <input type="text" id="messageInput" placeholder="Type a message...">
-                <span class="icon mic-icon" id="micIcon"><i class="fas fa-microphone"></i></span>
-                <span class="icon plus-icon" id="plusIcon" onclick="openmodal()"><i class="fas fa-plus"></i></span>
-                <span class="icon send-icon hidden" id="sendIcon"><i class="fas fa-paper-plane"></i></span>
-            </div>
-        </div>
-    </div>
+        {% block content %}  
+        
+        
+        {% endblock %}
 
     <div id="openmodal" class="modal">
         <div class="modal-content">
