"add landing page"

--- a/CLOCK_CHAT/templates/auth/signin.html
+++ b/CLOCK_CHAT/templates/auth/signin.html
@@ -188,7 +188,7 @@
         
                     // Keep the loader visible during redirection
                     setTimeout(() => {
-                        window.location.href = "/";
+                        window.location.href = "/chat/";
                     }, 2000);
                     loader.style.display = "none"; // Hide loader only if verification fails
                     
