"solve status create and css problem"

--- a/CLOCK_CHAT/templates/status/status_create.html
+++ b/CLOCK_CHAT/templates/status/status_create.html
@@ -94,7 +94,7 @@ function postStatus() {
     })
     .then(data => {
         alert('Status posted successfully!');
-        location.reload();
+        window.location.href="/status/";
     })
     .catch(error => console.error('Error:', error));
 }
