--- a/CLOCK_CHAT/templates/enduser/Chats/chat.html
+++ b/CLOCK_CHAT/templates/enduser/Chats/chat.html
@@ -10,10 +10,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
         
         {% block extra_css %}
-            <link rel="stylesheet" href="static/css/clock.css">
+            <link rel="stylesheet" href="/static/css/clock.css">
         {% endblock %}
     
-        <script src="static/js/chat_js.js"></script>
+        <script src="/static/js/chat_js.js"></script>
     </head>
     
     <style>
@@ -182,7 +182,7 @@
     <div class="toolbar">
         <div class="toolbar-icons">
             <span class="toolbar-icon active" data-tooltip="Chats"><i class="fas fa-comment-alt"></i></span>
-            <span class="toolbar-icon" data-tooltip="Status"><i class="fas fa-circle-notch"></i></span>
+            <span class="toolbar-icon" data-tooltip="Status" onclick="window.location.href='/status/'"> <i class="fas fa-circle-notch"></i></span>
             <span class="toolbar-icon" data-tooltip="Out"><i class="fa-solid fa-arrow-right-from-bracket"></i></span>
             <span class="toolbar-icon" data-tooltip="Settings"><i class="fas fa-cog"></i></span>
         </div>
