--- a/CLOCK_CHAT/templates/adminuser/dashboard.html
+++ b/CLOCK_CHAT/templates/adminuser/dashboard.html
@@ -4,39 +4,68 @@
 {% block title %}Clock-Chat Admin-Chat Update{% endblock %}
 
 {% block content %}
-
 <style>
-{% comment %} body {
-    font-family: sans-serif;
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-    background-color: #f0f8ff; /* Light blue background */
-    gap: 45px;
-} {% endcomment %}
+    html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        width: 100%;
+        box-sizing: border-box;
+        background: linear-gradient(135deg, #f0f0f0, #dbeeff);
+    }
 
-.chart-container {
-    width: 400px;
-    border: 1px solid #ddd;
-    padding: 20px;
-    background-color: white;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-}
+    .content-wrapper {
+        margin-left: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 90px;
+        height: 95vh;
+        width: 72vw;
+    }
 
-canvas {
-    width: 100% !important;
-    height: auto !important;
-}
+    .chart-container {
+        flex: 1 1 40%;
+        min-width: 300px;
+        min-height: 500px;
+        max-height: 90vh;
+        border: 2px solid #ddd;
+        padding: 20px;
+        background-color: white;
+        box-shadow: 3px 2px 5px rgba(0, 0, 0, 0.1);
+        position: relative;
+    }
+
+    canvas {
+        padding:10px;
+        width: 100% !important;
+        height: 100% !important;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    @media (max-width: 768px) {
+        .chart-container {
+            flex-basis: 100%;
+            height: 400px;
+        }
+    }
 </style>
+
+
+
+<div class="content-wrapper">
+    <div class="chart-container">
+        <canvas id="lineChart"></canvas>
+    </div>
+    
+    <div class="chart-container">
+        <canvas id="barChart"></canvas>
+    </div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-<div class="chart-container">
-    <canvas id="lineChart"></canvas>
-</div>
-
-<div class="chart-container">
-    <canvas id="barChart"></canvas>
-</div>
 
 <script>
 // Line Chart Data
