--- a/CLOCK_CHAT/templates/status/status_view.html
+++ b/CLOCK_CHAT/templates/status/status_view.html
@@ -62,6 +62,10 @@
     }
 
     .profile-pic {
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      object-fit: cover;
       width: 40px;
       height: 40px;
       background-color: #5815aa;
@@ -97,8 +101,8 @@
 
     .status-body {
       width: 100%;
-      height: 100%;
-      background-color: #dc9393;
+      height: 89%;
+      background-color: #000000;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -132,23 +136,31 @@
       <div class="progress-bar">
         <div class="progress-fill"></div>
       </div>
-
+      {% if status_details %}
+      {% for status in status_details %}
       <div class="status-header">
-        <div class="profile-pic"></div>
+        <div class="profile-pic">
+          <img src="{{user_details.user_profile}}" style="border-radius: 50%;height: 100%">
+        </div>
         <div class="user-info">
-          <div class="number">User</div>
-          <div class="time">Just now</div>
+          <div class="number">{{user_details.full_name}}</div>
+          <div class="time">{{status.created_at}}</div>
         </div>
       </div>
-
       <div class="status-body">
+        <img src="{{status.media_url}}" style="width:100%;">
       </div>
-
 
       <div class="view-count">
         <div class="eye-icon"></div>
         <span> 0</span>
       </div>
+      {% endfor %}
+
+
+      {% else %}
+      <p>Media not found</p>
+      {% endif %}
     </div>
   </div>
 </body>
